Task Manager[work-in-progress]

--- a/tasks.json
+++ b/tasks.json
@@ -4,5 +4,11 @@
         "description": "needs food",
         "priority": "Medium",
         "due_date": "2025-01-01"
+    },
+    {
+        "name": "med",
+        "description": "astaxanthin",
+        "priority": "Low",
+        "due_date": "2024-01-01"
     }
 ]
