--- a/tasks.json
+++ b/tasks.json
@@ -7,7 +7,7 @@
     },
     {
         "name": "med",
-        "description": "astaxanthin",
+        "description": "nootropics",
         "priority": "Low",
         "due_date": "2024-01-01"
     }
